# pySigma-backend-hawk

./: LICENSE  LLM_HANDOFF.md  README.md  dev_cli.py  pyproject.toml
scripts/: generate_logsource_enrichments.py
sigma/backends/hawk/: __init__.py  field_mapper.py  hawk.py  logsource_enrichment.py
sigma/backends/hawk/config/: hawk_field_config.yml  logsource_enrichments.yml
sigma/pipelines/hawk/: __init__.py  hawk.py
tests/: test_backend_hawk.py  test_pipelines_hawk.py
